--- a/app/assets/stylesheets/others.scss
+++ b/app/assets/stylesheets/others.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Others controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.style {
+    &_image {
+        width: 110px;
+        height: 55px;
+    }
+}
