--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Index is working !</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+
+<div class="jumbotron text-center">
+    <div class="container">
+        <div class="jumbotron_heading">
+            <h1 class="display-4">Hello, world!</h1>
+            <p>Life’s a party, If one does what he loves 🤘🏼</p>
+        </div>
+    </div>
+</div>
+
+<section id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+          <h2>Intro</h2>
+          <p>This is a great place to talk about these. This blog developed with Ruby on Rails as simple project to learning this awesome technology.</p>
+          <ul>
+            <li>Clickable rails router between different controllers</li>
+            <li>Basic functionalities CRUD</li>
+            <li>Forms</li>
+            <li>Layouts</li>
+            <li>Bootstrap 4</li>
+            <li>Basic authentication</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
