--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,73 @@
 
  // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+
+a {
+    margin: 0 5px;
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+nav {
+    box-shadow: 1px 4px 10px #ececec;
+}
+.jumbotron {
+    background-image: url("https://w.wallhaven.cc/full/ne/wallhaven-ne71jl.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    height: 300px;
+    position: relative;
+    z-index: 1;
+
+    &:after {
+        background-color: rgba(0, 0, 0, 0.31);
+        content: '';
+        height: 300px;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 2;
+    }
+
+    &_heading {
+        position: relative;
+        z-index: 4;
+    }
+}
+
+.card {
+    box-shadow: 0px 6px 12px #ececec;
+    margin-bottom: 14px;
+
+    &-title {
+        font-weight: 800 !important;
+    }
+
+    &-text {
+        font-weight: 300 !important;
+        color: #a5a5a5;
+    }
+}
+
+.auto {
+    &_height {
+        margin: 10px 0 25px 0;
+    }
+}
+
+.style {
+    &_image {
+        width: 110px;
+        height: 55px;
+    }
+}
+
+footer {
+    background-color: #fff;
+    padding: 20px;
+}
