--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,36 @@
+<div class="jumbotron text-center">
+    <div class="container">
+        <div class="jumbotron_heading">
+          <h1 class="display-4">Listing Articles</h1>
+          <p">Check it out to our article list. 🙂</p>
+        </div>
+    </div>
+</div>
 
-<h1>Listing Articles</h1>
-<%= link_to 'New article', new_article_path %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th colspan="3"></th>
-  </tr>
- 
-  <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Details', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-</table>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 auto_height">
+        <%= link_to('New article', new_article_path, :class => 'btn btn-large btn-primary')  %>
+      </div>
+    </div>
+    <div class="row">
+      <% @articles.each do |article| %>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title"><%= article.title %></h5>
+              <p class="card-text"><%= article.text %></p>
+              <hr>
+              <%= link_to 'Details', article_path(article) %>
+              <%= link_to 'Edit', edit_article_path(article) %>
+              <%= link_to 'Delete', article_path(article),
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</section>
