--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,11 @@
-
-<h1>New Article</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+<div class="container">
+    <div class="row">
+        <div class="col-12 auto_height">
+            <%= link_to 'Back', articles_path %>
+        </div>
+        <div class="col-md-6 offset-md-3 card">
+            <h1>New Article</h1>
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
