--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,10 @@ nav {
     }
 }
 
+.form {
+    padding: 30px 10px;
+}
+
 .card {
     box-shadow: 0px 6px 12px #ececec;
     margin-bottom: 14px;
