--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,24 +1,25 @@
 <div class="card my-4">
   <h5 class="card-header">Leave a Comment:</h5>
   <div class="card-body">
-    <form>
       <%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
-        <div class="form-group">
-          <textarea class="form-control" rows="3"></textarea>
+
+       <div class="control-group">
+        <%= form.label :Author, class: "control-label" %>
+        <div class="controls">
+          <%= form.text_field :commenter, class: "form-control", placeholder: "Enter a subject" %></p>
         </div>
-        <p>
-          <%= form.label :commenter %><br>
-          <%= form.text_field :commenter %>
-        </p>
-        <p>
-          <%= form.label :body %><br>
-          <%= form.text_area :body %>
-        </p>
-        <p>
-          <%= form.submit %>
-        </p>
-        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      
+      <div class="control-group">
+        <%= form.label :Comment, class: "control-label"%>
+        <div class="controls">
+          <%= form.text_area :body, class: "form-control", placeholder: "Enter a comment", rows: "5" %></p>
+        </div>
+      </div>
+
+      <div class="form-actions">
+        <%= form.submit 'Save', class: 'btn btn-primary' %>
+      </div>
       <% end %>
-    </form>
   </div>
 </div>
