--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,24 +7,24 @@
     </div>
     <div class="row">
       <div class="col-lg-8">
+
         <h1 class="mt-4"><%= @article.title %></h1>
-        <p class="lead">
-          by
-          <a href="#">author </a>
-        </p>
-        <hr>
-        <p>Date</p>
-        <hr>
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+
+        <p>Created: <%= @article.created_at %><span>, by: Anonymous</span></p>
+
         <hr>
 
-        <p class="lead"><%= @article.text %></p>
+        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+
+        <hr>
+
+        <p"><%= @article.text %></p>
 
         <hr>
 
         <%= render 'comments/form' %>
-
         <%= render @article.comments %>
+
       </div>
 
       <div class="col-md-4">
@@ -47,26 +47,7 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Web Design</a>
-                  </li>
-                  <li>
-                    <a href="#">HTML</a>
-                  </li>
-                  <li>
-                    <a href="#">Freebies</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">JavaScript</a>
-                  </li>
-                  <li>
-                    <a href="#">CSS</a>
-                  </li>
-                  <li>
-                    <a href="#">Tutorials</a>
+                    <a href="#">Category</a>
                   </li>
                 </ul>
               </div>
