--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
 
         <h1 class="mt-4"><%= @article.title %></h1>
 
-        <p>Created: <%= @article.created_at %><span>, by: Anonymous</span></p>
+        <p>Created: <%= @article.created_at.to_formatted_s(:long) %><span>, by: Anonymous</span></p>
 
         <hr>
 
@@ -52,13 +52,6 @@
                 </ul>
               </div>
             </div>
-          </div>
-        </div>
-
-        <div class="card my-4">
-          <h5 class="card-header">Side Widget</h5>
-          <div class="card-body">
-            You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
           </div>
         </div>
       </div>
